# ai-orchestration-kit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: config.example.yml  handoff.example.md
orchestration_kit/: __init__.py  audit.py  classifier.py  cli.py  executor.py  store.py  watcher.py
