[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestration-kit"
version = "0.1.0"
description = "A substrate-based handoff bus with a safe, auditable autonomous executor."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]

[project.scripts]
orchestrate = "orchestration_kit.cli:main"

[tool.setuptools]
packages = ["orchestration_kit"]
